--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Heebo:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
     <div class="app"></div>
   </body>
