--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
       href="https://fonts.googleapis.com/css?family=Heebo:400,500,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/favicon16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="/favicon32.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="/favicon48.png" sizes="48x48" type="image/png" />
+    <link rel="icon" href="/favicon16.png" sizes="64x64" type="image/png" />
   </head>
   <body>
     <div class="app"></div>
