--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>enitoni.dev</title>
     <link
       href="https://fonts.googleapis.com/css?family=Heebo:400,500,700&display=swap"
       rel="stylesheet"
